appId: com.kuriosity.engineering
tags:
  - smoke
---
- launchApp
- extendedWaitUntil:
    visible:
      id: home-screen
    timeout: 20000
- tapOn:
    id: home-insights
- extendedWaitUntil:
    visible:
      id: reports-screen
    timeout: 10000
- assertVisible:
    text: "Archive insights"
